k3s/deployment.yaml
#
# kubectl apply -k .
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: metabase-server
  # Dont let two Pods fiddle with the DB at the same time:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: metabase-server
    spec:
      # Volumes used by some or all containers of the Pod:
      volumes:
      - name: "metabase-data"
        persistentVolumeClaim:
          claimName: "metabase-data"
      containers:
      - name: metabase-server
        # Exact version see kustomization.yaml:
        image: "metabase/metabase"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: "/data"
          name: "metabase-data"
---
apiVersion: v1
kind: Service
metadata:
  name: metabase-server
spec:
  type: ClusterIP
  selector:
    component: metabase-server
  ports:
  - port: 3000
    targetPort: 3000
---
#
# We  assume here  that  *.localhost resolves  to  the local  machine.
# Following URL should be directed to corresponding Service, also with
# https:// protocoll:
#
#     http://metabase.localhost
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase
spec:
  rules:
  - host: metabase.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metabase-server
            port:
              number: 3000
